--- a/test.html
+++ b/test.html
@@ -6,6 +6,8 @@
 
 <body>
     <ul>
-        <li><input type="checkbox" id="item1">웹 공부하기</li>
+        <li><input type="checkbox" id="item1">웹 마스터되기</li>
+        <li><input type="checkbox" id="item1">근육짱짱맨되기</li>
+        <li><input type="checkbox" id="item1">주식부자되기</li>
     </ul>
 </body>
