--- a/test.html
+++ b/test.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content=
+"width=device-width, initial-scale=1.0">
     <h1>전역하기 전에 할 것</h1>
 </head>
 
 <body>
-    <li><input type="checkbox" id="item1">웹 마스터되기</li>
-    <li><input type="checkbox" id="item1">근육짱짱맨되기</li>
-    <li><input type="checkbox" id="item1">주식부자되기</li>
+    <label for="input">입력: </label>
+    <input type="text" id="input">
+
+    <br>
+
+    <label for="check">Checkbox</label>
+    <input type="checkbox" id="check">
 </body>
+</html>
