--- a/test.html
+++ b/test.html
@@ -3,16 +3,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=
 "width=device-width, initial-scale=1.0">
-    <h1>전역하기 전에 할 것</h1>
+    <h1>체크리스트</h1>
 </head>
 
 <body>
     <label for="input">입력: </label>
-    <input type="text" id="input">
+    <input type="text" id="input" placeholder="여기에 입력">
+    <button onclick="addItem()">제출</button>
 
     <br>
 
     <label for="check">Checkbox</label>
     <input type="checkbox" id="check">
+
+    <script src="script.js"><</script>
+
 </body>
 </html>
