--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
     <label for="check">Checkbox</label>
     <input type="checkbox" id="check">
 
-    <script src="script.js"><</script>
+    <script src="script.js"></script>
 
 </body>
 </html>
