--- a/test.html
+++ b/test.html
@@ -13,8 +13,9 @@
 
     <br>
 
-    <label for="check">Checkbox</label>
-    <input type="checkbox" id="check">
+    <form id="checklistForm">
+        <fieldset id="checklist"></fieldset>
+    </form>
 
     <script src="script.js"></script>
 
