--- a/test.html
+++ b/test.html
@@ -17,6 +17,8 @@
         <fieldset id="checklist"></fieldset>
     </form>
 
+    <button type="button" onclick="reset()">초기화</button>
+
     <script src="script.js"></script>
 
 </body>
