--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=
 "width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type=""text/css" href="style.css">
     <h1>체크리스트</h1>
 </head>
 
