--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content=
 "width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type=""text/css" href="style.css">
-    <h1>체크리스트</h1>
+    <title>체크리스트</title>
+    <link rel="stylesheet" type=""text/css" href="./style.css">
 </head>
 
 <body>
+    <h1>체크리스트</h1>
+    
     <label for="input">입력: </label>
     <input type="text" id="input" placeholder="여기에 입력">
     <button onclick="addItem()">제출</button>
