--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content=
 "width=device-width, initial-scale=1.0">
     <title>체크리스트</title>
-    <link rel="stylesheet" type=""text/css" href="/web/style.css">
+    <link rel="stylesheet" type=""text/css" href="/web/main/style.css">
 </head>
 
 <body>
